<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <android.support.v7.widget.CardView
                    android:id="@+id/cardOneID"
                    android:focusable="true"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:foreground="?attr/selectableItemBackground"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="4dp"
                    app:cardUseCompatPadding="true">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="170dp"
                            android:fitsSystemWindows="true"
                            android:src="@drawable/head_wall_bg"
                            android:scaleType="fitXY"
                            android:contentDescription="@string/image"/>
                        <ImageView
                            android:id="@+id/admin_picID"
                            android:layout_width="118dp"
                            android:layout_height="79dp"
                            android:layout_marginTop="91dp"
                            android:src="@drawable/admin_icon"
                            android:layout_alignParentTop="true"
                            android:contentDescription="@string/image"
                            android:layout_marginStart="2dp"
                            android:layout_alignParentStart="true"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textColor="@color/about_twitter_color"
                            android:gravity="bottom"
                            android:id="@+id/subTextId"
                            android:layout_marginTop="4dp"
                            android:text="@string/developer"
                            android:layout_below="@id/admin_picID"
                            android:layout_alignParentStart="true"
                            android:textAlignment="center"
                            tools:ignore="RtlCompat" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="77dp"
                            android:textStyle="normal"
                            android:textColor="@color/black"
                            android:gravity="center"
                            android:id="@+id/introID"
                            android:padding="2dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginRight="10dp"
                            android:text="@string/about_wallpaper"
                            android:layout_below="@id/admin_picID"
                            android:textAlignment="center"
                            android:layout_marginStart="0dp"
                            android:layout_alignParentStart="true"/>

                        <TextView
                            android:id="@+id/sendEmailID"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_marginBottom="5dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:focusableInTouchMode="true"
                            android:foreground="?attr/selectableItemBackground"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:text="@string/send_email"
                            android:textAllCaps="true"
                            android:textColor="@color/about_twitter_color"
                            android:textStyle="bold"
                            android:layout_alignStart="@id/introID"
                            tools:ignore="UnusedAttribute" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textColor="@color/about_twitter_color"
                            android:id="@+id/facebookID"
                            android:focusable="true"
                            android:clickable="true"
                            android:foreground="?attr/selectableItemBackground"
                            android:text="@string/facebook"
                            android:layout_alignTop="@id/sendEmailID"
                            android:layout_centerHorizontal="true"
                            android:textAllCaps="true"
                            tools:ignore="UnusedAttribute" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textColor="@color/about_twitter_color"
                            android:id="@+id/gitHubID"
                            android:focusable="true"
                            android:clickable="true"
                            android:foreground="?attr/selectableItemBackground"
                            android:text="@string/github"
                            android:textAllCaps="true"
                            android:layout_alignEnd="@id/introID"
                            android:layout_alignTop="@id/sendEmailID"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            tools:ignore="UnusedAttribute" />
                    </RelativeLayout>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:id="@+id/cardTwoID"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="4dp"
                    app:cardUseCompatPadding="true">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="173dp"
                            android:fitsSystemWindows="true"
                            android:src="@drawable/wallpaper_bg"
                            android:scaleType="fitXY"
                            android:contentDescription="@string/image"/>
                        <ImageView
                            android:id="@+id/clientID"
                            android:layout_width="95dp"
                            android:layout_height="95dp"
                            android:layout_marginTop="91dp"
                            android:src="@drawable/nav_client_profile"
                            android:layout_alignParentTop="true"
                            android:contentDescription="@string/image"
                            android:layout_marginStart="16dp"
                            android:layout_alignParentStart="true"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textColor="@color/about_twitter_color"
                            android:gravity="bottom"
                            android:id="@+id/subTextId2"
                            android:layout_marginTop="-8dp"
                            android:text="@string/client"
                            android:layout_below="@id/clientID"
                            android:layout_marginStart="6dp"
                            android:layout_alignParentStart="true"
                            android:layout_centerInParent="true"/>

                        <TextView
                            android:id="@+id/facebookIDClient"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/subTextId2"
                            android:layout_alignParentStart="true"
                            android:layout_marginStart="30dp"
                            android:layout_marginTop="19dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:foreground="?attr/selectableItemBackground"
                            android:text="@string/facebook"
                            android:textAllCaps="true"
                            android:textColor="@color/about_twitter_color"
                            android:textStyle="bold"
                            tools:ignore="UnusedAttribute" />
                    </RelativeLayout>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:focusable="true"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="4dp"
                    app:cardUseCompatPadding="true">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/tgs5"
                        android:scaleType="fitXY"
                        android:contentDescription="@string/image"/>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:focusable="true"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="4dp"
                    app:cardUseCompatPadding="true">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/tgs6"
                        android:scaleType="fitXY"
                        android:contentDescription="@string/image"/>
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</RelativeLayout>